gccida/g2/final_biv_value
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/final_biv_value/src/unroll.c:3669:1: error: use of undeclared identifier 'induction_1'
induction_1 *biv; // rax 
^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/final_biv_value/src/unroll.c:3669:14: error: use of undeclared identifier 'biv'; did you mean 'div'?
induction_1 *biv; // rax 
             ^~~
             div
/usr/include/stdlib.h:849:14: note: 'div' declared here
extern div_t div (int __numer, int __denom)
             ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/final_biv_value/src/unroll.c:3682:1: error: use of undeclared identifier 'biv'
biv = bl_0->biv; 
^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/final_biv_value/src/unroll.c:3683:6: error: use of undeclared identifier 'mode_class_0'
if ( mode_class_0[biv->mode] != MODE_INT ) 
     ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/final_biv_value/src/unroll.c:3683:19: error: use of undeclared identifier 'biv'
if ( mode_class_0[biv->mode] != MODE_INT ) 
                  ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/final_biv_value/src/unroll.c:3697:11: error: use of undeclared identifier 'biv'
src_reg = biv->src_reg; 
          ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/final_biv_value/src/unroll.c:3705:1: error: use of undeclared identifier 'biv'
biv = bl_0->biv; 
^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/final_biv_value/src/unroll.c:3709:1: error: use of undeclared identifier 'biv'
biv = bl_0->biv; 
^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/final_biv_value/src/unroll.c:3713:11: error: use of undeclared identifier 'biv'
src_reg = biv->src_reg; 
          ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/final_biv_value/src/unroll.c:3725:21: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
exit_labels = ( rtx)exit_labels[1]; 
                    ^~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/final_biv_value/src/unroll.c:3741:19: error: use of undeclared identifier 'biv'
v9 = gen_reg_rtx( biv->mode); 
                  ^
11 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/final_biv_value/src/obj/unroll.o] Error 1
